<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headingMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:foregroundGravity="center_vertical"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstLogin"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:fontFamily="monospace"
            android:layout_margin="15dp"
            android:text="@string/typeUser" />
        <ImageView
            android:id="@+id/mainHomeMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/playListMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/playlist" />

        <ImageView
            android:id="@+id/buyMusicMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/buymusic" />

        <ImageView
            android:id="@+id/myAccountMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/account" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomMain"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_below="@+id/headingMain">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:id="@+id/layoutMain">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeUser"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/typeUser" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userNameTyped"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:hint="@string/typeUserHere"
                    android:fontFamily="monospace"/>

            </LinearLayout>
            <ImageView
                android:id="@+id/accountVisible"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/account"
                android:background="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountTypeChoose"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/accountTypeChoose" />

            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/accountRadioMain">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/platinum"
                    android:text="@string/platinum"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gold"
                    android:text="@string/gold"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/silver"
                    android:text="@string/silver"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bronze"
                    android:text="@string/bronze"/>
            </RadioGroup>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/verificationMain"
                android:text="@string/verifyMain"/>
            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/scrollAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomMain"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@+id/headingMain">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:id="@+id/accountLayoutMain">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userNameFixed"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/userName" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:text="@string/error" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountTypeFixed"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/accountType" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountTypeChange"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:text="@string/accountTypeChanged" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/creditAmountFixed"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/creditAmount" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/creditAmount"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:text="@string/error" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/songAmountFixed"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_marginEnd="15dp"
                    android:text="@string/ownedSongs" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/songAmount"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:text="@string/error" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/headingMain"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomMain"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimaryDark"
    android:foregroundGravity="center_vertical"
    android:orientation="vertical">

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playBarMain"
        android:background="@color/colorPrimaryDark"
        android:layout_alignBottom="@+id/bottomMain"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/playMusicMain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/pauseMusicMain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/pause" />

        <ImageView
            android:id="@+id/stopMusicMain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/stop" />
    </LinearLayout>

</RelativeLayout>